--- a/project/AlmostGB.vcxproj
+++ b/project/AlmostGB.vcxproj
@@ -29,6 +29,8 @@
   <ItemGroup>
     <ClInclude Include="..\src\Cartridge.h" />
     <ClInclude Include="..\src\CPU.h" />
+    <ClInclude Include="..\src\libs\cppformat\format.h" />
+    <ClInclude Include="..\src\libs\cppformat\posix.h" />
     <ClInclude Include="..\src\MMU.h" />
     <ClInclude Include="..\src\utils.h" />
   </ItemGroup>
@@ -121,7 +123,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\src\libs\cppformat;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -155,7 +157,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\src\libs\cppformat;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
