--- a/project/AlmostGB.vcxproj.filters
+++ b/project/AlmostGB.vcxproj.filters
@@ -19,6 +19,12 @@
     <Filter Include="Source Files\libs\cppformat">
       <UniqueIdentifier>{5941f847-3d31-46fa-be52-a366c0eedf2a}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\libs">
+      <UniqueIdentifier>{c3403f9c-26eb-47c7-af8a-0e073471ee8c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\libs\cppformat">
+      <UniqueIdentifier>{fd0f7652-4a35-4822-b51d-e17972a2a2bc}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\main.cpp">
@@ -52,6 +58,12 @@
     </ClInclude>
     <ClInclude Include="..\src\utils.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\libs\cppformat\posix.h">
+      <Filter>Header Files\libs\cppformat</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\libs\cppformat\format.h">
+      <Filter>Header Files\libs\cppformat</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
